Fixed areas on land map; fixed spacing of count bubbles

--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -1,7 +1,8 @@
 #map {
-  margin-left: 2.5%;
-  margin-right: 2.5%;
-  width: 95%;
+  text-align: left;
+  margin-left: 0;
+  margin-right: 0;
+  width: 100%;
   margin: 0 0 30px 0;
   padding: 0;
   height: 800px;
